--- a/spring-cloud-alibaba-dependencies/pom.xml
+++ b/spring-cloud-alibaba-dependencies/pom.xml
@@ -18,10 +18,10 @@
     <description>Spring Cloud Alibaba Dependencies</description>
 
     <properties>
-        <revision>2023.0.1.2</revision>
+        <revision>2023.0.1.2.1</revision>
         <sentinel.version>1.8.8</sentinel.version>
-        <nacos.client.version>2.3.2</nacos.client.version>
-        <seata.version>2.0.0</seata.version>
+        <nacos.client.version>2.4.2</nacos.client.version>
+        <seata.version>2.1.0</seata.version>
         <spring.context.support.version>1.0.11</spring.context.support.version>
         <!-- Apache RocketMQ -->
         <rocketmq.version>5.1.4</rocketmq.version>
@@ -170,13 +170,17 @@
                 <artifactId>sentinel-spring-webmvc-v6x-adapter</artifactId>
                 <version>${sentinel.version}</version>
             </dependency>
-
-            <!--Alibaba Seata-->
             <dependency>
-                <groupId>io.seata</groupId>
+                <groupId>org.apache.seata</groupId>
                 <artifactId>seata-spring-boot-starter</artifactId>
                 <version>${seata.version}</version>
             </dependency>
+<!--            &lt;!&ndash;Alibaba Seata&ndash;&gt;-->
+<!--            <dependency>-->
+<!--                <groupId>io.seata</groupId>-->
+<!--                <artifactId>seata-spring-boot-starter</artifactId>-->
+<!--                <version>${seata.version}</version>-->
+<!--            </dependency>-->
             <!--Alibaba RocketMQ-->
             <dependency>
                 <groupId>org.apache.rocketmq</groupId>
