--- a/spring-cloud-alibaba-starters/spring-cloud-starter-alibaba-ai/pom.xml
+++ b/spring-cloud-alibaba-starters/spring-cloud-starter-alibaba-ai/pom.xml
@@ -92,10 +92,11 @@
 		</dependency>
 
 		<dependency>
-			<groupId>javax.annotation</groupId>
-			<artifactId>jsr250-api</artifactId>
-			<version>1.0</version>
+			<groupId>jakarta.annotation</groupId>
+			<artifactId>jakarta.annotation-api</artifactId>
+			<version>3.0.0</version>
 		</dependency>
+
 
 	</dependencies>
 
