--- a/spring-cloud-alibaba-tests/spring-cloud-alibaba-test-support/pom.xml
+++ b/spring-cloud-alibaba-tests/spring-cloud-alibaba-test-support/pom.xml
@@ -19,14 +19,14 @@
 
         <junit.version>5.10.2</junit.version>
         <selenium.version>3.141.59</selenium.version>
-        <lombok.version>1.18.30</lombok.version>
-        <assertj-core.version>3.20.2</assertj-core.version>
-        <awaitility.version>4.1.0</awaitility.version>
+        <lombok.version>1.18.34</lombok.version>
+        <assertj-core.version>3.26.3</assertj-core.version>
+        <awaitility.version>4.2.2</awaitility.version>
         <kotlin.version>1.9.24</kotlin.version>
-        <slf4j-api.version>2.0.13</slf4j-api.version>
-        <log4j-slf4j-impl.version>2.23.1</log4j-slf4j-impl.version>
-        <guava.version>31.1-jre</guava.version>
-        <hamcrest.version>1.3</hamcrest.version>
+        <slf4j-api.version>2.0.16</slf4j-api.version>
+        <log4j-slf4j2-impl.version>2.24.0</log4j-slf4j2-impl.version>
+        <guava.version>33.3.0-jre</guava.version>
+        <hamcrest.version>3.0</hamcrest.version>
     </properties>
 
 
@@ -43,25 +43,16 @@
         </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-slf4j-impl</artifactId>
-            <version>${log4j-slf4j-impl.version}</version>
+            <artifactId>log4j-slf4j2-impl</artifactId>
+            <version>${log4j-slf4j2-impl.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.hamcrest</groupId>
-            <artifactId>hamcrest-library</artifactId>
+            <artifactId>hamcrest</artifactId>
             <version>${hamcrest.version}</version>
             <scope>test</scope>
         </dependency>
-
-        <dependency>
-            <groupId>org.hamcrest</groupId>
-            <artifactId>hamcrest-core</artifactId>
-            <version>${hamcrest.version}</version>
-            <scope>test</scope>
-        </dependency>
-
-
 
         <dependency>
             <groupId>org.junit.jupiter</groupId>
@@ -94,7 +85,7 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>4.6.1</version>
+            <version>5.13.0</version>
         </dependency>
         <dependency>
             <groupId>org.rnorth.visible-assertions</groupId>
