--- a/spring-cloud-alibaba-dependencies/pom.xml
+++ b/spring-cloud-alibaba-dependencies/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.springframework.cloud</groupId>
         <artifactId>spring-cloud-dependencies-parent</artifactId>
-        <version>4.1.0</version>
+        <version>4.1.3</version>
         <relativePath/>
     </parent>
 
@@ -294,9 +294,14 @@
             <dependency>
                 <groupId>com.alibaba.fastjson2</groupId>
                 <artifactId>fastjson2</artifactId>
-                <version>2.0.52</version>
+                <version>2.0.53</version>
             </dependency>
 
+            <dependency>
+                <groupId>com.alibaba.fastjson</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>2.0.53</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
